--- a/src/main/resources/static/css/control.css
+++ b/src/main/resources/static/css/control.css
@@ -182,3 +182,8 @@ input[file] {
 .underline .notextdecoration {
     text-decoration: none;
 }
+.locationClock {
+    position: absolute;
+    left:40px;
+    top:100px;
+}
