--- a/src/main/resources/static/css/testfeedback.css
+++ b/src/main/resources/static/css/testfeedback.css
@@ -30,7 +30,9 @@ svg {
     stroke-dashoffset: 440;
     transition: all 1s linear;
 }
-
+.cursorPointer {
+    cursor: pointer;
+}
 @media (min-width: 992px) {
     .modal-xl {
         max-width: 80%;
