--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -36,7 +36,7 @@
         <div class="col" id="alert">
         </div>
 
-        <div class="col-8"  >
+        <div class="col-9"  >
         <ul class="nav nav-pills" id="pills-tab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="pills-competitie-tab" data-toggle="pill" href="#pills-competitie" role="tab" aria-controls="pills-competitie" aria-selected="true">Snel starten</a>
@@ -176,8 +176,8 @@
     <div class="row" ><br/>
     </div>
     <div class="row adminRole role" th:if="${isWithAdminRole}">
-        <div class="col-4"  ></div>
-        <div class="col-8"  >
+        <div class="col-3"  ></div>
+        <div class="col-9"  >
 
             <ul class="nav nav-pills" id="pills-tab2" role="tablist">
                 <li class="nav-item">
@@ -352,7 +352,7 @@
         </div>
     </div>
 </div>
-<div style="position: absolute; left:120px; top:100px;">
+<div class="locationClock">
     <div class="text-center"   >
         <h4>[[${competitionName}]]</h4>
         <h4><span th:if="${running}">'[[${currentAssignment}]]'</span><span th:if="${clockStyle=='disabled'}" class="italic">&nbsp;PAUSED</span></h4>
