--- a/src/main/resources/templates/testfeedback.html
+++ b/src/main/resources/templates/testfeedback.html
@@ -38,7 +38,7 @@
         </div>
         <div class="col-5 d-flex justify-content-center">
             <div class="align-self-center">
-                <h1>Assignment: <span id="assignment-name" th:attr="data-assignment=${uuid}">[[${assignment}]]</span>
+                <h1>Assignment: <span id="assignment-name" th:attr="data-assignment=${uuid}" class="cursorPointer">[[${assignment}]]</span>
                 </h1>
             </div>
         </div>
