--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -111,7 +111,7 @@
             <div class="p-2 align-self-center">
                 <h2>Team: [[${team}]]</h2>
                 <div class="p-2 align-self-center alignCenter">
-					<a th:href="@{/control}" class="btn btn-danger" th:classappend="${isControlRole?'':'hide'}">control</a>
+					<a th:href="@{/control}" class="btn btn-danger" th:classappend="${(isControlRole||isControlRole==null)?'':'hide'}">control</a>
 					                </div>
             </div>
             <div class="p-2 text-center">
