--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -109,7 +109,9 @@
                      src="/static/images/moj_logo.png"/>
             </div>
             <div class="p-2 align-self-center">
-                <h2>Team: [[${team}]]</h2>
+                <h2 th:if="${team!=null}">Team: [[${team}]]</h2>
+
+
                 <div class="p-2 align-self-center alignCenter">
 					<a th:href="@{/control}" class="btn btn-danger" th:classappend="${(isControlRole||isControlRole==null)?'':'hide'}">control</a>
                 </div>
