--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -289,7 +289,7 @@
 
                 </div>
                 <div class="tab-pane fade" id="pills-gebruikersbeheer" role="tabpanel" aria-labelledby="pills-gebruikersbeheer-tab">
-                    <h6>Beheren van teams (selecteer een team indien u deze wilt aanpassen)</h6>
+                    <h6>Beheren van teams (selecteer een team indien u deze wilt aanpassen, uw naam is: [[${currentUserName}]])</h6>
                     <br>
                     <div class="row">
                         <div class="p-2 col-6">
