[onderhoud] nieuwe pagina's voor onderscheid in  play/home/index

--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -245,9 +245,10 @@
                     <div class="row">
                         <div class="p-2 col-5 roundGrayBorder" >
                             <h6>U kunt nieuwe opdrachtcollecties als zip-file uploaden</h6><br/>
-                                &nbsp;<sup>(let op:
-                            - hiermee kunt u eventueel bestaande opdrachtcollecties overschrijven
-                            - het invoerbestand moet beginnen met een (jaar)getal en het woord assignments bevatten (bv 2018-assignments.zip)</sup>
+                                &nbsp;<sup>(let op:<br/>
+                            - hiermee kunt u eventueel bestaande opdrachtcollecties overschrijven<br/>
+                            - het invoerbestand moet beginnen met een (jaar)getal en het woord assignments bevatten <br/>
+                            - (bv 2018-assignments.zip)<br/></sup>
                         </div>
                         <div class="p-2 col-6 roundGrayBorder">
 
