--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,313 +2,20 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Masters of Java</title>
 
-    <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/solid.min.css}"/>
-    <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/fontawesome.min.css}"/>
-    <link rel="stylesheet" th:href="@{/webjars/codemirror/addon/hint/show-hint.css}"/>
-    <link rel="stylesheet" th:href="@{/webjars/codemirror/lib/codemirror.css}"/>
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/css/index.css}"/>
+    <title>Masters of Java - Startpage</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" th:href="@{/images/apple-touch-icon.png}">
-    <link rel="icon" type="image/png" sizes="32x32" th:href="@{/images/favicon-32x32.png}">
-    <link rel="icon" type="image/png" sizes="16x16" th:href="@{/images/favicon-16x16.png}">
-    <link rel="manifest" th:href="@{/manifest.json}">
-    <link rel="mask-icon" th:href="@{/images/safari-pinned-tab.svg}" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
 
-    <script type="application/javascript" >
-        isWithValidation = [[${isWithValidation}]];
-    </script>
+
+    <link rel="manifest" href="/static/manifest.json"/>
+    <meta name="theme-color" content="#ffffff"/>
+
+
 </head>
+<body>
+        <h6>Welcome to the Masters Of Java competition.</h6>
 
-<body class="p-2">
-<div class="container-fluid">
-    <!-- content -->
-    <div class="row">
-        <div class="col-9">
-            <!--/*@thymesVar id="running" type="java.lang.Boolean"*/-->
-            <div class="text-center mt-5" th:unless="${running}">
-                <h1>No active assignment</h1>
-                <p>At the moment there is no assignment active. Once an assignment is started you will automatically be
-                    shown the assignment. (If not press F5 to reload the page.)</p>
-            </div>
-
-            <!--/*@thymesVar id="finished" type="java.lang.Boolean"*/-->
-
-
-            <div id="content" th:if="${running}" th:attr="finished=${finished},submittime=${submittime}">
-                <div class="p-2">
-                    <h3>Assignment: [[${assignment}]] <span th:if="${(solution)}"> (with provided solution)</span> </h3>
-                </div>
-                <div id="alert-container">
-                    <div th:if="${finished and (finalscore &gt; 0)}" class="alert alert-success p-4" role="alert">
-                        <h4 class="alert-heading">Assignment Submitted</h4>
-                        <p>Well done!. You have submitted the assignment for final review. Chill out and wait until the
-                            next assignment starts.</p>
-                    </div>
-                    <div th:if="${finished and finalscore == 0}" class="alert alert-danger p-4" role="alert">
-                        <h4 class="alert-heading">Assignment Tests Failed :-(</h4>
-                        <p>Your score is 0. Chill out and wait until the next assignment starts. Better luck next
-                            time!</p>
-                    </div>
-                </div>
-                <div th:unless="${finished}" id="tabs">
-                    <ul class="nav nav-tabs" role="tablist">
-                        <!--/*@thymesVar id="files" type="java.util.List<nl.moj.server.files.AssignmentFile>"*/-->
-                        <li class="nav-item" th:each="file,status : ${files}">
-                            <a class="nav-link"
-                               th:classappend="${(status.index==0?'active':'') + (file.readOnly?'':' editable')}"
-                               th:id="${'cm-'+file.uuid}"
-                               th:href="${'#tab-'+file.uuid}" data-toggle="tab"
-                            >
-                                <span th:if="${file.fileType == T(nl.moj.server.runtime.model.AssignmentFileType).TASK}"
-                                      class="fas fa-tasks"></span>
-                                <span th:if="${file.fileType == T(nl.moj.server.runtime.model.AssignmentFileType).EDIT}"
-                                      class="fas fa-code"></span>
-                                <span th:if="${file.fileType == T(nl.moj.server.runtime.model.AssignmentFileType).READONLY}"
-                                      class="fas fa-code"></span>
-                                <span th:if="${file.fileType == T(nl.moj.server.runtime.model.AssignmentFileType).RESOURCE}"
-                                      class="fas fa-code"></span>
-                                <span th:if="${file.fileType == T(nl.moj.server.runtime.model.AssignmentFileType).TEST}"
-                                      class="fas fa-vial"></span>
-                                <span th:if="${file.fileType == T(nl.moj.server.runtime.model.AssignmentFileType).TEST_RESOURCE}"
-                                      class="fas fa-vial"></span>
-                                <span th:id="${'tabLink_'+file.shortName}"  class='unitTestTab' th:title="${file.shortName}" th:text="${file.shortName}"></span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" id="output" href="#output-tab" data-toggle="tab"><span
-                                    class="fas fa-terminal"></span> Output</a>
-                        </li>
-                    </ul>
-                    <div class="tab-content">
-                        <div class="tab-pane" th:classappend="${status.index==0?'show active':''}" role="tabpanel"
-                             th:each="file,status : ${files}" th:id="${'tab-'+file.uuid}">
-                            <div class="tab-pane-content">
-                                <textarea
-                                        th:attr="data-cm=${'cm-'+file.uuid},data-cm-id=${file.uuid},data-cm-file-type=${file.fileType},data-cm-readonly=${file.readOnly},data-cm-name=${file.shortName}"
-                                        th:utext="${file.getContentAsString()}"></textarea>
-                            </div>
-                        </div>
-                        <div class="tab-pane fade" role="tabpanel" id="output-tab">
-                            <div id="output-content" class="output-content">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-3 d-flex flex-column">
-            <div class="p-2 align-self-center">
-                <img width="128" height="97" th:src="@{/images/moj_logo.png}" class="img-fluid"
-                     src="/static/images/moj_logo.png"/>
-            </div>
-            <div class="p-2 align-self-center">
-                <h2 th:if="${team!=null}">Team: [[${team}]]</h2>
-
-
-                <div class="p-2 align-self-center alignCenter">
-					<a th:href="@{/control}" class="btn btn-danger" th:classappend="${(isControlRole||isControlRole==null)?'':'hide'}">control</a>
-                </div>
-            </div>
-            <div class="p-2 text-center">
-                <br/>
-                <br/>
-                <br/>
-            </div>
-            <div th:if="${running}" class="p-2 align-self-center">
-                <div class="text-center">
-                    <h3>Time Left</h3>
-                </div>
-                <div id="assignment-clock"
-                     th:attrappend="data-time-left=${timeLeft},data-time=${time},running=${running}"
-                     class="align-self-center">
-                    <div class="time d-flex justify-content-center" style="height: 160px; width: 160px;">
-                        <h2 class="align-self-center">--:--</h2>
-                    </div>
-                    <svg width="160" height="160" xmlns="http://www.w3.org/2000/svg">
-                        <g>
-                            <circle class="clock circle_animation" r="69.85699" cy="81" cx="81"
-                                    stroke-width="8"
-                                    stroke="#6fdb6f" fill="none"></circle>
-                        </g>
-                    </svg>
-                </div>
-            </div>
-
-            <div th:if="${running}" class="p-2 text-center">
-                <a class="btn w-50 btn-warning text-white"
-                   th:href="@{/javadoc/api/index.html(overview-tree.html)}"
-                   target="_blank">Javadoc</a>
-            </div>
-            <div th:if="${running}" class="p-2 text-center">
-                <button id="compile" class="btn w-50 btn-success" th:disabled="${finished}">Compile</button>
-            </div>
-            <div th:if="${running}" class="p-2  text-center">
-                <button id="show-tests" class="btn w-50 btn-success" data-toggle="modal" data-target="#test-modal"
-                        onclick="resetTabColor();" th:disabled="${finished}">Test
-                </button>
-            </div>
-            <div th:if="${running}" class="mt-5 p-2 text-center">
-                <button id="btn-open-submit" class="btn w-50 btn-danger" data-toggle="modal"
-                        data-target="#confirm-submit-modal" th:disabled="${submitDisabled}">SUBMIT
-                </button>
-            </div>
-
-        </div>
-    </div>
-    <!-- footer -->
-    <div class="fixed-bottom footer d-flex">
-        <div class="mr-auto p-2">
-            <img th:src="@{/images/logo_first8_150x39.png}" class="img-fluid"
-                 src="/static/images/logo_first8_150x39.png"/>
-            &nbsp;
-            &nbsp;
-            &nbsp;
-            <div th:if="${running}" class="p-2 text-center inlineBlock minWidth100">
-                <a class="btn btn-info text-white"
-                   th:href="@{/feedback}"
-                   target="_blank"><span class="fa fa-gamepad pr-1"></span>Live Feedback</a>
-            </div>
-            <div th:if="${running}" class="p-2 text-center inlineBlock minWidth100">
-                <a class="btn btn-info text-white"
-                   th:href="@{/rankings}"
-                   target="_blank"><span class="fa fa-trophy pr-1"></span>Rankings</a>
-            </div>
-            <div class="p-2  inlineBlock minWidth100 " th:if="${sessions!=null && sessions.size()>=1}">
-                <form class="form" method="post" th:action="@{/index/select-session}" th:object="${selectSessionForm}">
-                    <div >
-                        <select class="form-control inlineBlock maxWidth300 font10px" th:classappend="${sessions.size()==1?'hide':''}"
-                                id="sessions"  onchange="if (this.value) $(this).closest('form').submit()" th:field="*{session}" th:title="*{session}">
-                            <option value="">Speelbare competities: </option>
-                            <option th:each="s : ${sessions}" th:value="${s.uuid}" th:text="${'Session '+(sStat.index +1)+ ' (' + s.getCompetition().getShortName()+ ')'}">
-                            </option>
-                        </select>
-                    </div>
-                </form>
-            </div>
-
-
-        </div>
-        <div class="mr-auto p-2">&nbsp;
-
-        </div>
-        <div class="ml-auto pr-2 align-self-center" id="status"></div>
-        <div class="pr-2 align-self-center">
-            <a th:href="@{/sso/logout}" class="btn btn-danger">Disconnect</a>
-        </div>
-    </div>
-</div>
-
-
-<!-- Modal Tests -->
-<div class="modal fade" id="test-modal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Test Selection</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p>Please select the tests you want to run.</p>
-                <form>
-                    <div class="form-check" th:each="test : ${tests}">
-                        <label class="form-check-label">
-                            <input name="test" class="form-check-input" type="checkbox" th:value="${test.uuid}"
-                                   checked="true">
-                            [[${test.shortName}]]
-                        </label>
-                    </div>
-                </form>
-                <i><span th:if="${labels!=null && labels.size()>0}">. Points for each individual test: [[${labels.toString().replace("_","=")}]]</span></i>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" id="test" class="btn btn-primary" th:disabled="${finished}">Run Tests</button>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Modal Tests -->
-<div class="modal fade" id="editTeam-modal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="contactDetailsLabel">Update name or contact details</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p>Update your team name.</p>
-                <p contenteditable="true" class="paddingLeft50">[[${team}]]</p>
-                <p>Update your contact details.</p>
-                <form class="paddingLeft50">
-                    <div class="form-check" th:each="test : ${tests}">
-                        <label class="form-check-label">
-                            <input name="test" class="form-check-input" type="checkbox" th:value="${test.uuid}"
-                                   checked="true">
-                            [[${test.shortName}]]
-                        </label>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" id="saveContactDetails" class="btn btn-primary" data-dismiss="modal">Save</button>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Modal confirm submit -->
-<div class="modal fade" id="confirm-submit-modal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Are you sure you want to submit?</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p>This will submit your code. If you reach the maximum allowed submits of [[${maxSubmits}]] you will no
-                    longer be able
-                    to change your code. You have <span id="submits" th:text="${submits}"></span> left.</p>
-                <p>Do you want to continue?</p>
-            </div>
-            <div class="modal-footer">
-                <button type="cancel-submit" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button id="submit" class="btn w-50 btn-danger" th:disabled="${submitDisabled}">SUBMIT</button>
-            </div>
-        </div>
-    </div>
-</div>
-<script type="text/javascript">
-    assignmentName='[[${assignmentName}]]';
-</script>
-
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/1.1.28/howler.js"></script>
-<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script type="text/javascript" th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
-<script type="text/javascript" th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-
-<script type="text/javascript" th:src="@{/webjars/codemirror/lib/codemirror.js}"></script>
-<script type="text/javascript" th:src="@{/webjars/codemirror/addon/edit/matchbrackets.js}"></script>
-<script type="text/javascript" th:src="@{/webjars/codemirror/addon/selection/active-line.js}"></script>
-<script type="text/javascript" th:src="@{/webjars/codemirror/addon/hint/show-hint.js}"></script>
-<script type="text/javascript" th:src="@{/webjars/codemirror/mode/clike/clike.js}"></script>
-<script type="text/javascript" th:src="@{/webjars/stomp-websocket/stomp.min.js}"></script>
-
-<script type="text/javascript" th:src="@{/js/clock.js}"></script>
-<script type="text/javascript" th:src="@{/js/app.js}"></script>
+        <p>click on the next link to <a href="/play">enter our game zone</a></p>
 
 </body>
 </html>
