[onderhoud] mooiere HomeController en JavaScript error voorkomen via GameController

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,16 +3,17 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <style>
-table td{
-vertical-align:top;
-border:solid 1px #888;
-padding:10px;
-}
+        table td {
+            vertical-align: top;
+            border: solid 1px #888;
+            padding: 10px;
+        }
 
     </style>
 </head>
 <body>
-<h1>Oeps, something went wrong. Please try again later</h1>
+<h1>ERROR</h1><br><br>
+<h1>Oeps, something went wrong. Please try again later (view logs for more details)</h1><br>
 <table>
     <tr>
         <td>Date</td>
