--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,16 +6,46 @@
     <title>Masters of Java - Startpage</title>
 
 
-
     <link rel="manifest" href="/static/manifest.json"/>
     <meta name="theme-color" content="#ffffff"/>
 
-
+    <style type="text/css">
+        ol a {
+            text-decoration: none;
+        }
+        a:hover {
+           background-color: yellow;
+        }
+    </style>
 </head>
 <body>
-        <h6>Welcome to the Masters Of Java competition.</h6>
+<h3>Welcome to the Masters Of Java demo on 18-08!</h3>
 
-        <p>click on the next link to <a href="/play">enter our game zone</a></p>
+<h3>Navigate:</h3>
+<ol>
+    <li>
+        <a href="/assignmentAdmin?assignment=HexagonalChess&solution">exercise with sample solution</a>
+    </li>
+    <li>
+        <a href="/play">enter our game zone</a>
+    </li>
+    <li>
+        <a href="/rankings">view scores</a>
+    </li>
+    <li>
+        <a href="/feedback">view back actions on current assignment</a>
+    </li>
+    <li>
+        <a href="/control">origanize our game zone</a>
+    </li>
+</ol>
+
+<iframe width="500" height="300" src="https://www.youtube.com/embed/CcxUbPsCPdQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
+<img width="500" height="300" src="https://upload.wikimedia.org/wikipedia/commons/8/84/Hexagonal_chess.svg">
+<br>
+<img width="500" height="300" src="https://www.completecircledigitalmarketing.com/wp-content/uploads/2020/03/SEO_Best_Practices_2020.jpg">
+
 
 </body>
 </html>
