--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" th:href="@{/webjars/codemirror/addon/hint/show-hint.css}"/>
     <link rel="stylesheet" th:href="@{/webjars/codemirror/lib/codemirror.css}"/>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/css/index.css}"/>
+    <link rel="stylesheet" th:href="@{/css/play.css}"/>
 
     <link rel="apple-touch-icon" sizes="180x180" th:href="@{/images/apple-touch-icon.png}">
     <link rel="icon" type="image/png" sizes="32x32" th:href="@{/images/favicon-32x32.png}">
