--- a/src/main/resources/templates/testfeedback.html
+++ b/src/main/resources/templates/testfeedback.html
@@ -161,7 +161,7 @@
 <script type="text/javascript" th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-<script type="text/javascript" th:src="@{/webjars/stomp-websocket/stomp.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/stomp__stompjs/bundles/stomp.umd.min.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/codemirror/lib/codemirror.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/codemirror/addon/edit/matchbrackets.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/codemirror/addon/selection/active-line.js}"></script>
