--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -301,6 +301,7 @@
 <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 
 <script type="text/javascript" th:src="@{/webjars/codemirror/lib/codemirror.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/codemirror/mode/markdown/markdown.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/codemirror/addon/edit/matchbrackets.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/codemirror/addon/selection/active-line.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/codemirror/addon/hint/show-hint.js}"></script>
