[onderhoud] responsiveness van CodeMirror verder verbeterd

--- a/src/main/resources/static/css/play.css
+++ b/src/main/resources/static/css/play.css
@@ -89,3 +89,7 @@ body .cm-s-default .cm-variable-2 {
 .cm-s-default .cm-header {
     color:black;
 }
+.CodeMirror.TASK {
+    font-family: Arial, monospace;
+    font-size: 18px;
+}
